fix bug: double border

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -835,9 +835,8 @@ body :not( :checked ) > .toctogglespan:after {
 	overflow-x: auto;
 	border-color: @base70;
 	background: @base90;
-	border-width: 1.125px;
 
-	> tbody {
+	table {
 		border: none;
 	}
 
